@@ -19,6 +19,8 @@ kde4libs (4:4.6.1-0r1) UNRELEASED; urgency=low
   * Remove sequence numbers from debian/patches.
   * Drop kaboom support, no longer needed.
   * Remove ~/.kde4 -> ~/.kde transition templates, no longer needed.
+  * Set ENABLE_LIBKDEINIT_RUNPATH to ON if build type is Debian
+    (patch make_libkdeinit4_private.diff altered).
 
   [ George Kiagiadakis ]
   * Change my email address in uploaders.
